# py-2laba-3

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/: main.py  processor.py  registry.py
src/sources/: api_src.py  file_src.py  gen_src.py
src/tasks/: descriptors.py  enums.py  exceptions.py  queue.py  task.py  validators.py
tests/: test_api_src.py  test_descriptors.py  test_file_src.py  test_gen_src.py  test_processor.py  test_registry.py  test_task_queue.py
